Sacrifice speed by suppressing memory consumption.